--- a/css/style.css
+++ b/css/style.css
@@ -57,14 +57,13 @@ ul {
 .pt-70 {
   padding-top: 70px;
 }
-
 .pb-10 {
   padding-bottom: 10px;
 }
-
 .ms-10 {
   margin-left: 10px;
 }
+
 .me-30 {
   margin-right: 30px;
 }
@@ -120,12 +119,69 @@ ul {
 .text-gray {
   color: #bfc1c8;
 }
-/* * -----------> finderSec <------------- */
+
+/* * -----------------> navbar <----------------- */
+.navbar {
+  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255,255,255,1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.navbar-toggler:hover .navbar-toggler-icon {
+  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgb(0, 154, 216)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.navbar-toggler:hover {
+  border: 2px solid #009ad8;
+}
+
+.navbar-toggler {
+  padding: 20px;
+  border: 2px solid transparent;
+  border-radius: 999px;
+  line-height: 0.9;
+  font-size: 0px;
+  transition: all 0.3s ease;
+}
+
+.navbar-toggler-icon {
+  width: 13px;
+  height: 17px;
+  vertical-align: baseline;
+  transition: all 0.3s ease;
+}
+
+.navbar-toggler:focus {
+  box-shadow: none;
+}
+
+.navbar-nav {
+  background-color: #262936;
+  text-align: center;
+  border-radius: 10px;
+  --bs-nav-link-padding-x: 20px;
+  --bs-nav-link-padding-y: 20px;
+}
+
+.navbar-collapse {
+  padding-top: 30px;
+}
+
+.navItems-borderBot {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+a.nav-link:focus,
+a.nav-link:hover {
+  color: rgb(0, 154, 216) !important;
+}
+
+/* * -----------> Main Sec <------------- */
 #finderSec {
   background-image: url(../images/banner.png);
   background-repeat: no-repeat;
   min-height: 350px;
 }
+
+/* * ==> Form <== */
 
 .form-control {
   padding: 20px 50px 20px 20px;
@@ -160,7 +216,13 @@ input::placeholder {
   border-color: transparent;
 }
 
-#Forecast-table #TodayForecast .Degree {
+#SearchMsgId {
+  top: 65px;
+  left: 30px;
+  color: rgb(254, 0, 0);
+}
+/* * ==> Forecast table <== */
+#Forecast-table #TodayForecast .AvgDeg {
   font-size: 90px;
   font-weight: 700;
   line-height: 135px;
@@ -171,12 +233,12 @@ input::placeholder {
   height: 90px;
 }
 
-#Forecast-table .NextDays .Degree {
+#Forecast-table .NextDays .MaxDeg {
   font-size: 24px;
   font-weight: 700;
   line-height: 36px;
 }
-#Forecast-table .NextDays .Degree2 {
+#Forecast-table .NextDays .MinDeg {
   font-size: 16px;
   font-weight: 300;
   line-height: 24px;
@@ -188,6 +250,7 @@ input::placeholder {
   height: 48px;
 }
 
+/* * -----------------> footer <----------------- */
 footer .Links a.LinksBtn {
   width: 40px;
   height: 40px;
@@ -205,61 +268,3 @@ footer .Links a.LinksBtn:hover {
 footer .Links a.LinksBtn:focus {
   outline: thin dotted;
 }
-
-/* * ----------------->  <----------------- */
-
-
-.navbar {
-  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255,255,255,1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-}
-
-.navbar-toggler:hover .navbar-toggler-icon {
-  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgb(0, 154, 216)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-}
-
-.navbar-toggler:hover {
-  border: 2px solid #009ad8;
-}
-
-.navbar-toggler {
-  padding: 20px;
-  border: 2px solid transparent;
-  border-radius: 999px;
-  line-height: 0.9;
-  font-size: 0px;
-  transition: all 0.3s ease;
-}
-
-.navbar-toggler-icon {
-  width: 13px;
-  height: 17px;
-  vertical-align: baseline;
-  transition: all 0.3s ease;
-}
-
-.navbar-toggler:focus {
-  box-shadow: none;
-}
-
-
-.navbar-nav {
-  background-color: #262936;
-  text-align: center;
-  border-radius: 10px;
-  --bs-nav-link-padding-x: 20px;
-  --bs-nav-link-padding-y: 20px;
-}
-
-.navbar-collapse{
-  padding-top: 30px;
-}
-
-.navItems-borderBot{
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-  a.nav-link:focus,
-  a.nav-link:hover {
-    color: rgb(0, 154, 216) !important;
-  }
-
