--- a/css/ContactStyle.css
+++ b/css/ContactStyle.css
@@ -181,7 +181,43 @@ a.nav-link:hover {
   color: rgb(0, 154, 216) !important;
 }
 
-/* * -----------> finderSec <------------- */
+a.active{
+  color: rgb(0, 154, 216) !important;
+}
+/* * -----------> main <------------- */
+main div.map {
+  height: 220px;
+}
+
+.contactForm input,.contactForm textarea {
+  padding: 15px;
+  margin-bottom: 10px;
+  color: white;
+  border: 2px solid #393c48;
+  background: transparent;
+}
+
+.contactForm input:hover,
+.contactForm input:focus,
+.contactForm textarea:hover,
+.contactForm textarea:focus {
+  border-color: #009ad8;
+}
+
+textarea::placeholder {
+  color: #85868c !important;
+}
+
+.ContactFormBtn{
+    color: #ffffff;
+}
+
+
+.ContactFormBtn:hover {
+  color: #ffffff;
+  background-color: #009ad8;
+  border-color: transparent;
+}
 
 .form-control {
   padding: 20px 50px 20px 20px;
@@ -253,37 +289,3 @@ footer .Links a.LinksBtn:focus {
   color: #bfc1c8;
 }
 
-/* * -----------> main <------------- */
-main div.map {
-  height: 220px;
-}
-
-.contactForm input,.contactForm textarea {
-  padding: 15px;
-  margin-bottom: 10px;
-  color: white;
-  border: 2px solid #393c48;
-  background: transparent;
-}
-
-.contactForm input:hover,
-.contactForm input:focus,
-.contactForm textarea:hover,
-.contactForm textarea:focus {
-  border-color: #009ad8;
-}
-
-textarea::placeholder {
-  color: #85868c !important;
-}
-
-.ContactFormBtn{
-    color: #ffffff;
-}
-
-
-.ContactFormBtn:hover {
-  color: #ffffff;
-  background-color: #009ad8;
-  border-color: transparent;
-}
